# activestorage-ocr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Gemfile  Makefile  README.md  Rakefile  activestorage-ocr.gemspec
.github/workflows/: ci.yml  release.yml
lib/: activestorage-ocr.rb
lib/activestorage/: ocr.rb
lib/activestorage/ocr/: analyzer.rb  binary.rb  client.rb  configuration.rb  railtie.rb  result.rb  version.rb
lib/generators/activestorage_ocr/install/: USAGE  install_generator.rb
rust/: Cargo.toml
rust/src/: config.rs  engine.rs  error.rs  main.rs  ocr.rs  server.rs
rust/src/engines/: leptess.rs  mod.rs  ocrs.rs
rust/src/preprocessing/: mod.rs  pipeline.rs
rust/src/preprocessing/steps/: denoise.rs  deskew.rs  grayscale.rs  mod.rs  normalize.rs  resize.rs  sharpen.rs  threshold.rs
rust/tests/: integration_test.rs
rust/tests/fixtures/: sample_text.tiff
test/: binary_test.rb  test_helper.rb
test/activestorage/ocr/: client_test.rb  configuration_test.rb  result_test.rb
test/sandbox/: Gemfile
test/sandbox/app/models/: document.rb
test/sandbox/config/: application.rb
test/sandbox/config/environments/: test.rb
test/sandbox/db/: schema.rb  test.sqlite3
test/sandbox/db/migrate/: 20241220000001_create_documents.rb  20241220000002_create_active_storage_tables.rb
test/sandbox/test/: test_helper.rb
test/sandbox/test/integration/: ocr_test.rb
test/sandbox/tmp/: local_secret.txt
